--- a/musicpage2nd.html
+++ b/musicpage2nd.html
@@ -21,7 +21,7 @@
 </style>
 	  
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="file:///C|/Users/yanni/Documents/GitHub/PRJ4-repository/Webdevelopment/Bootstrap(chapter6)/Local-bootstrap/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
 
     <title>Bastille in Glory</title>
   </head>
