--- a/musicpage2nd.html
+++ b/musicpage2nd.html
@@ -27,7 +27,7 @@
   </head>
 	
 <header><nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"> <img src="file:///C|/Users/yanni/Documents/GitHub/PRJ4-repository/Webdevelopment/Bootstrap(chapter6)/Local-bootstrap/Images/bastille logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+  <a class="navbar-brand" href="#"> <img src="Images/bastille logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
     Bastille</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="file:///C|/Users/yanni/Documents/GitHub/PRJ4-repository/Webdevelopment/Bootstrap(chapter6)/Local-bootstrap/homepage.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Music</a>
