--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </style>
 	  
     <!-- Bootstrap CSS -->
+	  
+	 
+	 
+	  
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
 
     <title>Bastille in Glory</title>
@@ -31,12 +35,14 @@
     Bastille</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
+	  
+	  
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="musicpage2nd.html">Music</a>
@@ -46,10 +52,10 @@
           Tour
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">2020</a>
+          <a class="dropdown-item" href="#">2021</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Archived tours</a>
         </div>
       </li>
      
@@ -59,6 +65,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
+	
 </nav>
 	</header>
 	<body style="padding-top:0px">
@@ -106,7 +113,7 @@
 	</main>
 <nav aria-label="breadcrumb">
 	  <ol class="breadcrumb">
-	    <li class="breadcrumb-item"><a href="/">Music</a></li>
+	    <li class="breadcrumb-item"><a href="musicpage2nd.html">Music</a></li>
 	    <li class="breadcrumb-item"><a href="#">Tour</a></li>
 	    <li class="breadcrumb-item active" aria-current="page">Home</li>
   </ol>
@@ -114,7 +121,12 @@
 <div class="footer">
   Copyright &copy; Yanni vanzijderveld Paipai
 </div>
-
+ <script
+  src="https://code.jquery.com/jquery-3.4.1.slim.js"
+  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+  crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 	
 </html>
