final final commit

--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<style>
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: white;
-   color: black;
-   text-align: center;
-	
-	
-	
-	
-</style>
+
 	  
     <!-- Bootstrap CSS -->
 	  
@@ -26,10 +13,10 @@
 	 
 	  
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
-
-    <title>Bastille in Glory</title>
+    <link href="CSS/styles.css" rel="stylesheet" type="text/css">
+<title>Bastille in Glory</title>
   </head>
-	
+	<body>
 <header><nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"> <img src="Images/bastille logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
     Bastille</a>
@@ -68,13 +55,13 @@
 	
 </nav>
 	</header>
-	<body style="padding-top:0px">
+	
 	
 
 	
 	  
 
-	<main style="padding-top: 50px">
+	
 <div class="container-sm">
   <div class="row">
     <div class="col-sm-4">
@@ -110,7 +97,7 @@
 	</div>
 </div>
 		</div>
-	</main>
+	
 <nav aria-label="breadcrumb">
 	  <ol class="breadcrumb">
 	    <li class="breadcrumb-item"><a href="musicpage2nd.html">Music</a></li>
